--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 </div>
             <div class="card" data-category="ramen">                 
     <div class="img-box">          
-        <img src="fried-rice.jpg" alt="Ramen">
+        <img src="fried-rice" alt="Ramen">
     </div>
 
     <div class="name-price">       
@@ -412,3 +412,4 @@ function filterCategory(category) {
 </script>
 
 </html>
+
