--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
             <div class="card" data-category="snack">
                 <div class="img-box">
-    <img src="Churro-Bugles" alt="snack">
+    <img src="image/Churro-Bugles.jpg" alt="snack">
 </div>
                 <div class="name-price">       
         <span class="name">Churro Bugles</span>
@@ -412,6 +412,7 @@ function filterCategory(category) {
 </script>
 
 </html>
+
 
 
 
