Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
             <div class="card" data-category="soup">
                 <div class="img-box">
-    <img src="image/chicken-broth.jpg" alt="soup">
+    <img src="food_page/image/chicken-broth.jpg" alt="soup">
 </div>
                 <div class="name-price">       
         <span class="name">chicken broth</span>
@@ -412,6 +412,7 @@ function filterCategory(category) {
 </script>
 
 </html>
+
 
 
 
