--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <button onclick="filterCategory('soup')">Soup</button>
 <button onclick="filterCategory('snack')">Snack</button>
 <button onclick="filterCategory('drink')">Drink</button>
-        <input type="text" placeholder="search ">
+        <input type="text" id="searchInput" placeholder="Search food">
     </div>
     
     <div class="content">
@@ -432,6 +432,39 @@ function applyFilters() {
 
 
 </html>
+<script>
+let activeCategory = 'all';
+
+function filterCategory(category) {
+    activeCategory = category;
+    applyFilters();
+}
+
+document.getElementById('searchInput').addEventListener('input', applyFilters);
+
+function applyFilters() {
+    const searchValue = document.getElementById('searchInput').value.toLowerCase();
+    const cards = document.querySelectorAll('.card');
+
+    cards.forEach(card => {
+        const category = card.dataset.category;
+        const name = card.querySelector('.name').textContent.toLowerCase();
+
+        const matchesCategory =
+            activeCategory === 'all' || category === activeCategory;
+
+        const matchesSearch =
+            name.includes(searchValue);
+
+        if (matchesCategory && matchesSearch) {
+            card.style.display = 'block';
+        } else {
+            card.style.display = 'none';
+        }
+    });
+}
+</script>
+
 
 
 
